# restricted-runner

./: .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  release.yml
cmd/restricted-runner/: main.go  main_test.go
docker/runner/: Dockerfile
docs/: config.md  deployment.md  design.md  protocol.md  runner-image.md  ssh.md
examples/: config.yaml
examples/docker-compose/: .env.example  README.md  docker-compose.yml
examples/root/homecloud/site/: apply  validate
examples/ssh/: authorized_keys.example  restricted-runner-ssh-entrypoint
internal/config/: load.go  load_test.go  types.go  types_test.go
internal/executor/: execute.go  execute_test.go  resolve.go  resolve_test.go
internal/policy/: match.go  match_test.go
internal/protocol/: types.go  types_test.go
scripts/: README.md  install-demo.sh  install-ssh-entrypoint.sh  uninstall-demo.sh  uninstall-ssh-entrypoint.sh
scripts/runner/: README.md  rr-dispatch-ssh  rr-exec
src/restricted_runner/: __init__.py  host_executor.py  restricted_command.py  restricted_dispatcher.py  runner.py
tests/: test_host_executor.py  test_restricted_command.py  test_restricted_dispatcher.py
