[project]
name = "restricted-runner"
version = "0.1.0"
description = "Restricted host execution primitives for self-hosted runner environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
restricted-runner-dispatch = "restricted_runner.restricted_dispatcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
